tests/neg-custom-args/captures/i24309-region-orig.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i24309-region-orig.scala:20:26 ---------------------------
20 |      val c: Ref^{r1.R} = b     // error, limitation
   |                          ^
   |                          Found:    (b : Ref^{r2.R})
   |                          Required: Ref^{r1.R}
   |
   |                          Note that capability `r2.R` is not included in capture set {r1.R}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i24309-region-orig.scala:21:6 -------------------------------------------------
21 |      a                         // error, limitation
   |      ^
   |      Local reach capability r1.R leaks into capture scope of an enclosing function.
   |      You could try to abstract the capabilities referred to by r1.R in a capset variable.
